[ticket/639] Fix slightly incorrect alignment in portal all view
B3P-639

--- a/styles/prosilver/theme/portal_all_responsive.css
+++ b/styles/prosilver/theme/portal_all_responsive.css
@@ -1,5 +1,5 @@
 @media only screen and (max-width: 870px), only screen and (max-device-width: 870px) {
-	.portal-body-center dd.posts, .portal-body-center dd.views {
+	.portal-body-center dd.posts, .portal-body-center dd.views, .portal-body-center dd.topics {
 		display: none !important;
 	}
 
